# blue-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-embedded.yml
examples/: basic.rs  embedded.rs  hebrew.rs  zero_shot.rs
src/: chunking.rs  lib.rs  phonemize.rs  style.rs  text.rs
