[package]
name = "blue-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
espeak-rs = { git = "https://github.com/thewh1teagle/piper-rs", rev = "616e6823cc29955bb0cf66532637b352b26fa292", package = "espeak-rs" }
hound = "3.5.1"
ndarray = "0.17"
ort = { version = "=2.0.0-rc.11", features = ["ndarray"] }
rand = "0.9"
rand_distr = "0.5"
regex = "1"
renikud-rs = { git = "https://github.com/thewh1teagle/renikud", branch = "main" }
rodio = "0.20"
rustfft = "6.2"
serde_json = "1"
unicode-normalization = "0.1"
